[gd_scene load_steps=15 format=2]

[ext_resource path="res://Parts/Weapon/Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Parts/Weapon/ATR/anti-tank rifle.png" type="Texture" id=2]
[ext_resource path="res://Parts/Weapon/ATR/AntiTankRifle.gd" type="Script" id=3]
[ext_resource path="res://Components/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Projectiles/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Parts/Weapon/ATR/ATR_DamageProfile.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 11 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 11, 64, 11 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 22, 64, 11 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 33, 64, 11 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 44, 64, 11 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 55, 64, 11 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 66, 64, 11 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[node name="Weapon" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 8 )
frame = 6
playing = true
centered = false
offset = Vector2( -18, -10 )

[node name="Firespeed" type="Timer" parent="." index="1"]
wait_time = 0.7
one_shot = true

[node name="BulletSpawner" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 40, -5 )
sceneToSpawn = ExtResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="." index="3"]
position = Vector2( -11, -5 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="DamageProfileSpawner" parent="." index="4" instance=ExtResource( 4 )]
sceneToSpawn = ExtResource( 6 )

[connection signal="timeout" from="Firespeed" to="." method="_on_Timer_timeout"]
